# development_of_django_lms_system

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
config/: settings.py  urls.py
lms/: models.py  serializers.py  urls.py  validators.py  views.py
lms/management/commands/: fill.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_alter_course_owner_alter_lesson_owner.py
lms/test/: test_subscription.py  test_views.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: load_groups.py
users/migrations/: 0001_initial.py
