[project]
name = "development-of-django-lms-system"
version = "0.1.0"
description = "all dependencies are connected and a file with a description of the project is created"
authors = [
    {name = "Artur Koltyrin"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "stripe (>=12.1.0,<13.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "eventlet (>=0.39.1,<0.40.0)",
    "redis (>=6.0.0,<7.0.0)",
    "django-timezone-field (<=7.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"
coverage = "^7.8.0"
pytest-cov = "^6.1.1"

[tool.poetry]
package-mode = false